[package]
name = "lib"
version = "0.0.0"
edition = "2024"
description = "LIB: Math and container utilities for Rust. Notice: study purpose, not production ready."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HCO168/hco_rust"
documentation = "https://docs.rs/hco" # docs.rs 自动文档
readme = "README.md"
keywords = ["math", "interval", "utils", "fraction"] # 搜索关键词
categories = ["algorithms", "data-structures"]  # crates.io 分类


include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/lib.rs",
    #ok to publish:
    "src/**"
]


[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
rand = "0.9.2"
num-traits = "0.2.19"

[features]
default = ["math","container"]
math = []
container = []